# docs/swagger.json
@@ -61,6 +61,24 @@
                     }
                 }
             }
+        },
+        "/healthcheck": {
+            "get": {
+                "description": "Healthcheck endpoint",
+                "tags": [
+                    "healthcheck"
+                ],
+                "summary": "Healthcheck endpoint",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
